# machado

./: ProjectHome.md  TODO  configure.ac  mkstuff.sh
data/adrianov/: anneal.ac.out  anneal.ac.testing  crx.ac.out  (+43 more)
src/: AppOptions.cpp  AppOptions.h  Class.cpp  Class.h  ClassList.cpp  ClassList.h  DataBase.cpp  DataBase.h  DataBaseException.cpp  IOManager.h  Item.cpp  Item.h  ItemHash.h  ItemList.cpp  ItemList.h  ItemSet.h  Makefile.am  Metrics.h  Pattern.cpp  Pattern.h  PatternList.cpp  PatternList.h  RankingRule.cpp  RankingRule.h  RankingRuleList.cpp  RankingRuleList.h  Rule.cpp  Rule.h  RuleList.cpp  RuleList.h  RuleUIntHash.cpp  Transaction.cpp  Transaction.h  TransactionList.cpp  TransactionList.h  main.cpp  run_massif.sh
src/base/: Converter.h  Hash.h  IOManager.cpp  IOManager.h  Lock.h  Lockable.h  LockableException.cpp  LockableHash.cpp  LockableObjectList.cpp  Logger.cpp  Logger.h  Makefile.am  Object.cpp  Object.h  ObjectFactory.h  ObjectHash.cpp  ObjectHash.h  ObjectList.cpp  ObjectList.h  ObjectListException.h  ObjectStrHash.cpp  ObjectStrHash.h  ObjectUIntHash.h  Rand.cpp  Rand.h  Tokenizer.cpp  Tokenizer.h  UInt32Float32Hash.cpp  types.h
test/: Common.pm  Parms.pm  classifier  lazy  lazy_acc  lazy_class  make_test.pl  make_test.sh  make_test_classifier.pl  make_test_classifier_c.pl  make_test_classifier_o.pl  make_test_classifier_or.pl  make_test_compare.pl  make_test_graphs.pl  make_test_lazy.pl  make_test_tables.pl  make_ttest_tables.pl
trunk/: TODO  configure.ac
trunk/src/base/: Exception.cpp  Hash.cpp  Hash.h  IOManager.h  Lock.cpp  Lockable.cpp  LockableException.h  LockableHash.h  LockableObjectList.h  Logger.h  Makefile.am  Object.cpp  Object.h  ObjectException.h  ObjectFactory.cpp  ObjectHash.cpp  ObjectHash.h  ObjectList.cpp  ObjectList.h  ObjectStrHash.cpp  ObjectUIntHash.cpp  StringUInt32Hash.cpp  StringUInt32Hash.h  stl_hash_include.h
(+472 files in other folders)
