SRCS 		= Object.cpp Logger.cpp ObjectList.cpp Converter.cpp		\
	ObjectHash.cpp ObjectStrHash.cpp ObjectUIntHash.cpp Exception.cpp	\
	ObjectListException.cpp ObjectException.cpp IOManager.cpp Tokenizer.cpp	\
	UInt32Float32Hash.cpp StringUInt32Hash.cpp

noinst_LTLIBRARIES	= libbase.la
libbase_la_SOURCES	= $(SRCS)
libbase_la_CPPFLAGS	= -pg
libbase_la_LDFLAGS	= -pg
