SRCS 		= Object.cpp Lockable.cpp Lock.cpp Logger.cpp ObjectList.cpp		\
	LockableObjectList.cpp ObjectHash.cpp LockableHash.cpp ObjectStrHash.cpp	\
	ObjectListException.cpp ObjectException.cpp LockableException.cpp IOManager.cpp	\
	ObjectUIntHash.cpp Converter.cpp Exception.cpp ObjectFactory.cpp Tokenizer.cpp

noinst_LTLIBRARIES	= libbase.la
libbase_la_SOURCES	= $(SRCS)
libbase_la_CPPFLAGS	= -pg
libbase_la_LDFLAGS	= -pg
